--- a/src/app/shared/data-view/data-view.component.css
+++ b/src/app/shared/data-view/data-view.component.css
@@ -1,3 +1,9 @@
 #dataview_content_table {
   font-family: 'Courier New', Courier, monospace
 }
+
+@media print {
+  .e-headercell.e-lastcell {
+    display: none;
+  }
+}
