--- a/src/app/features/ledgers/ledger/ledger.component.html
+++ b/src/app/features/ledgers/ledger/ledger.component.html
@@ -25,14 +25,12 @@
             <label for="date">Date</label>
             <ejs-datepicker
               formControlName="Date"
+              [value]="Date.value"
               id="date"
               name="date"
-              placeholder="Select Date"
-              type="date"
-              format="M/d/yyyy"
             >
             </ejs-datepicker>
-            daate:{{ ledgerForm.get("Date").value | date: "M/d/yyyy" }}
+            date:{{ ledgerForm.get("Date").value | date: "M/d/yyyy" }}
             <div class="e-error" *ngIf="Date.errors && Date.touched">
               <div *ngIf="Date.errors['required']">
                 *Date of Post is required
@@ -125,21 +123,13 @@
                     [attr.name]="'parentAccount' + i"
                   ></app-account-selector>
                 </div>
-                <div
-                  class="e-error"
-                  *ngIf="
-                    account.get('AccountId').errors &&
-                    account.get('AccountId').touched
-                  "
-                >
-                  <div *ngIf="account.get('AccountId').hasError('required')">
-                    *Account Id is required
-                  </div>
+                <div class="e-error" *ngIf="account.get('AccountId').touched">
                   <div
                     class="e-error"
                     *ngIf="account.get('AccountId').hasError('incorrect')"
                   >
                     *Please select a valid account
+                    {{ account.get("AccountId").value }}
                   </div>
                 </div>
               </div>
@@ -220,7 +210,7 @@
                     >
                   </div>
                   <div class="col-6">
-                    <p *ngIf="!isEqual && Entries.touched">
+                    <p *ngIf="!isEqual">
                       <small>Credit And Debit amount are not Equal</small>
                     </p>
                   </div>
