--- a/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       class="col-lg-3 col-sm-4"
       *ngFor="let items of dashboardItems; let i = index"
     >
-      <div class="items-panel" [attr.class]="items.name">
+      <div class="items-panel" [attr.class]="items.class">
         <div class="item-name">
           {{ items.name }}
           {{ items.value }}
