--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -41,7 +41,7 @@
     <e-column
       field="AccountId"
       textAlign="left"
-      headerText="Account Id"
+      headerText="Susidary Id"
       type="string"
       width="100"
       editable="false"
