added drop area for account chart

--- a/src/app/features/accounts/accounts-view/accounts-view.component.css
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.css
@@ -20,6 +20,6 @@
   background-color: #eee;
 }
 
-.e-groupdroparea.e-grouped.e-lib.e-droppable.e-draggable {
+/* .e-groupdroparea.e-grouped.e-lib.e-droppable.e-draggable {
   display: none;
-}
+} */
