account schedule added

--- a/src/app/features/accounts/accounts-view/accounts-view.component.css
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.css
@@ -20,6 +20,11 @@
   background-color: #eee;
 }
 
-/* .e-groupdroparea.e-grouped.e-lib.e-droppable.e-draggable {
-  display: none;
-} */
+.e-groupdroparea.e-grouped.e-lib.e-droppable.e-draggable {
+  /* display: none; */
+  background: #4d841d55;
+}
+
+.e-grid .e-groupheadercell {
+  background: #4d841d;
+}
