--- a/src/app/features/reports/checklist/checklist.component.html
+++ b/src/app/features/reports/checklist/checklist.component.html
@@ -26,6 +26,7 @@
       [allowExcelExport]="true"
       [toolbar]="toolbar"
       (toolbarClick)="clickHandler($event)"
+      [height]="600"
     >
       <e-columns>
         <e-column
