--- a/src/app/features/accounts/accounts-view/accounts-view.component.css
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.css
@@ -6,6 +6,14 @@
   #accounts * {
     height: auto !important;
   }
+
+  .e-ungroupbutton.e-icons.e-icon-hide {
+    display: none;
+  }
+
+  .e-groupsort.e-icons.e-ascending.e-icon-ascending {
+    display: none;
+  }
 }
 
 #accounts_content_table {
@@ -25,6 +33,15 @@
   background: #4d841d55;
 }
 
+.e-grouptext {
+  width: auto;
+}
+
 .e-grid .e-groupheadercell {
   background: #4d841d;
+  width: auto;
+}
+
+.e-grid.e-groupdroparea * {
+  background-color: #4d841d55 !important;
 }
