--- a/src/app/features/reports/balance-sheet/balance-sheet.component.html
+++ b/src/app/features/reports/balance-sheet/balance-sheet.component.html
@@ -21,33 +21,33 @@
         <th>Asset</th>
       </tr>
       <tr *ngFor="let asset of data?.Assets">
-        <td>{{ asset.AccountCategory }}</td>
+        <td class="lists">{{ asset.AccountCategory }}</td>
         <td>{{ asset.Amount | currency: "":"" }}</td>
       </tr>
       <tr>
-        <td>Total current assets:</td>
+        <td class="lists">Total current assets:</td>
         <td>{{ data?.TotalAsset | currency: "":"" }}</td>
       </tr>
       <tr>
         <th>Capital</th>
       </tr>
       <tr *ngFor="let capital of data?.Capitals">
-        <td>{{ capital.AccountCategory }}</td>
+        <td class="lists">{{ capital.AccountCategory }}</td>
         <td>{{ capital.Amount | currency: "":"" }}</td>
       </tr>
       <tr>
-        <td>Net capital:</td>
+        <td class="lists">Net capital:</td>
         <td>{{ data?.TotalAsset | currency: "":"" }}</td>
       </tr>
       <tr>
         <th>Liabilities</th>
       </tr>
       <tr *ngFor="let liability of data?.Liabilities">
-        <td>{{ liability.AccountCategory }}</td>
+        <td class="lists">{{ liability.AccountCategory }}</td>
         <td>{{ liability.Amount | currency: "":"" }}</td>
       </tr>
       <tr>
-        <td>Total current liabilities:</td>
+        <td class="lists">Total current liabilities:</td>
         <td>{{ data?.TotalAsset | currency: "":"" }}</td>
       </tr>
     </tbody>
