updated ledger form

--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -1,140 +1,12 @@
 <app-print-header [header]="'Chart of accounts'"></app-print-header>
-
-<ejs-grid
-  [dataSource]="data | async"
-  #grid
-  [allowExcelExport]="true"
-  id="accounts"
-  [toolbar]="toolbarOptions"
-  (dataStateChange)="dataStateChange($event)"
-  [allowPaging]="true"
-  [allowFiltering]="true"
-  [allowSorting]="true"
-  [allowResizing]="true"
-  [showColumnChooser]="true"
-  [allowPdfExport]="true"
-  (toolbarClick)="toolbarClick($event)"
-  [pageSettings]="initialPage"
-  [filterSettings]="filterOptions"
-  [showColumnChooser]="true"
-  [allowGrouping]="true"
+<app-grouped-data-view
+  [showUpdate]="true"
+  [showDelete]="true"
+  [gridData]="data"
+  [columnsList]="columnBluePrint"
+  [groupBy]="'ParentAccount'"
+  (dataStateChaged)="dataStateChange($event)"
   [groupSettings]="groupOptions"
-  [editSettings]="editSettings"
-  [height]="700"
-  databound="databound"
-  action-complete="actioncomplete"
+  #grid
 >
-  <e-columns>
-    <e-column
-      field="Id"
-      textAlign="left"
-      headerText="ID"
-      isPrimaryKey="true"
-      type="number"
-      width="10"
-      editable="false"
-      filterable="false"
-      groupable="false"
-      [visible]="false"
-    >
-    </e-column>
-    <e-column
-      field="AccountId"
-      textAlign="left"
-      headerText="Susidary Id"
-      type="string"
-      width="100"
-      editable="false"
-      filterable="false"
-      groupable="false"
-      [width]="100"
-    >
-    </e-column>
-
-    <e-column
-      field="AccountName"
-      textAlign="left"
-      headerText="Account Name"
-      isPrimaryKey="false"
-      type="string"
-      filterable="true"
-      editable="true"
-      groupable="false"
-      [width]="250"
-    ></e-column>
-    <e-column
-      field="Category"
-      textAlign="left"
-      headerText="Category"
-      isPrimaryKey="false"
-      type="string"
-      filterable="true"
-      editable="true"
-      [allowGrouping]="false"
-      [width]="150"
-    ></e-column>
-    <e-column
-      field="ParentAccount"
-      textAlign="left"
-      headerText="Control Account"
-      isPrimaryKey="false"
-      type="string"
-      filterable="true"
-      editable="true"
-      [allowGrouping]="true"
-      [width]="10"
-    ></e-column>
-
-    <e-column
-      field="Active"
-      textAlign="left"
-      headerText="Active"
-      isPrimaryKey="false"
-      type="boolean"
-      editType="booleanedit"
-      filterable="true"
-      editable="true"
-      groupable="true"
-      width="60"
-    >
-    </e-column>
-    <e-column
-      field="DateAdded"
-      textAlign="left"
-      headerText="Added"
-      isPrimaryKey="false"
-      type="datetime"
-      [format]="'yMd'"
-      filterable="true"
-      editable="true"
-      groupable="false"
-      [width]="80"
-      [visible]="false"
-    ></e-column>
-    <e-column
-      field="DateUpdated"
-      textAlign="left"
-      headerText="Updated"
-      isPrimaryKey="false"
-      type="date"
-      [format]="'yMd'"
-      filterable="true"
-      editable="true"
-      [visible]="false"
-      groupable="false"
-      [width]="80"
-    ></e-column>
-    <e-column [commands]="commands" [width]="50" textAlign="center"></e-column>
-  </e-columns>
-  <e-aggregates>
-    <e-aggregate>
-      <e-columns>
-        <e-column field="TotalAmount" type="sum" format="C2">
-          <ng-template #groupFooterTemplate let-data
-            >Sum: {{ data.sum }}</ng-template
-          >
-        </e-column>
-      </e-columns>
-    </e-aggregate>
-  </e-aggregates>
-</ejs-grid>
+</app-grouped-data-view>
