--- a/src/app/features/account-type/account-type-view/account-type-view.component.html
+++ b/src/app/features/account-type/account-type-view/account-type-view.component.html
@@ -17,10 +17,10 @@
   (toolbarClick)="toolbarClick($event)"
   [pageSettings]="initialPage"
   [filterSettings]="filterOptions"
-  [childGrid]="childGrid"
   [showColumnChooser]="true"
   [groupSettings]="groupOptions"
   (dataStateChange)="onDataStateChange($event)"
+  [height]="650"
 >
   <e-columns>
     <e-column
