--- a/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
+++ b/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
@@ -20,6 +20,7 @@
       [filterSettings]="filterOptions"
       (toolbarClick)="clickHandler($event)"
       (dataStateChange)="onDataStateChange($event)"
+      [height]="650"
     >
       <e-columns>
         <e-column
