--- a/src/app/features/reports/subsidary-ledger-report/subsidary-ledger-report.component.css
+++ b/src/app/features/reports/subsidary-ledger-report/subsidary-ledger-report.component.css
@@ -19,6 +19,15 @@
 
   .e-grid.e-default * {
     height: auto !important;
+    overflow: hidden !important;
+  }
+
+  .e-sortfilterdiv.e-icons.e-ascending.e-icon-ascending {
+    display: none;
+  }
+
+  .e-sortnumber {
+    display: none;
   }
 }
 
