--- a/src/app/features/reports/trial-balance-detail/trial-balance-detail.component.html
+++ b/src/app/features/reports/trial-balance-detail/trial-balance-detail.component.html
@@ -21,6 +21,7 @@
       (toolbarClick)="clickHandler($event)"
       [allowSorting]="true"
       (dataStateChange)="onDataStateChange($event)"
+      [height]="650"
     >
       <e-columns>
         <e-column
