--- a/src/app/shared/data-view/data-view.component.css
+++ b/src/app/shared/data-view/data-view.component.css
@@ -6,4 +6,9 @@
   .e-headercell.e-lastcell {
     display: none;
   }
+
+  .e-grid.e-default * {
+    height: auto !important;
+    overflow: hidden !important;
+  }
 }
