--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -20,7 +20,7 @@
   [allowGrouping]="true"
   [groupSettings]="groupOptions"
   [editSettings]="editSettings"
-  [height]="700"
+  [height]="650"
   databound="databound"
   action-complete="actioncomplete"
 >
@@ -34,7 +34,7 @@
       width="10"
       editable="false"
       filterable="false"
-      groupable="false"
+      [allowGrouping]="false"
       [visible]="false"
     >
     </e-column>
@@ -46,7 +46,7 @@
       width="100"
       editable="false"
       filterable="false"
-      groupable="false"
+      [allowGrouping]="false"
       [width]="100"
     >
     </e-column>
@@ -59,7 +59,7 @@
       type="string"
       filterable="true"
       editable="true"
-      groupable="false"
+      [allowGrouping]="false"
       [width]="250"
     ></e-column>
     <e-column
@@ -94,7 +94,7 @@
       editType="booleanedit"
       filterable="true"
       editable="true"
-      groupable="true"
+      [allowGrouping]="false"
       width="60"
     >
     </e-column>
@@ -107,7 +107,7 @@
       [format]="'yMd'"
       filterable="true"
       editable="true"
-      groupable="false"
+      [allowGrouping]="false"
       [width]="80"
       [visible]="false"
     ></e-column>
@@ -121,20 +121,9 @@
       filterable="true"
       editable="true"
       [visible]="false"
-      groupable="false"
+      [allowGrouping]="false"
       [width]="80"
     ></e-column>
     <e-column [commands]="commands" [width]="50" textAlign="center"></e-column>
   </e-columns>
-  <e-aggregates>
-    <e-aggregate>
-      <e-columns>
-        <e-column field="TotalAmount" type="sum" format="C2">
-          <ng-template #groupFooterTemplate let-data
-            >Sum: {{ data.sum }}</ng-template
-          >
-        </e-column>
-      </e-columns>
-    </e-aggregate>
-  </e-aggregates>
 </ejs-grid>
