updated group data view

--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -4,7 +4,7 @@
   [showDelete]="true"
   [gridData]="data"
   [columnsList]="columnBluePrint"
-  [groupBy]="'ParentAccount'"
+  [groupBy]="groupBy"
   (dataStateChaged)="dataStateChange($event)"
   #grid
 >
