--- a/src/app/shared/data-view/data-view.component.css
+++ b/src/app/shared/data-view/data-view.component.css
@@ -2,6 +2,10 @@
   font-family: 'Courier New', Courier, monospace
 }
 
+/* .e-toolbar {
+  display: none !important;
+} */
+
 @media print {
   .e-headercell.e-lastcell {
     display: none;
