--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -2,7 +2,7 @@
 <app-data-view
   [data]="data"
   [columnsList]="columnBluePrint"
-  [showAdd]="true"
+  [showAdd]="showAddLedger"
   [enableSorting]="true"
   [showUpdate]="true"
   [showDelete]="true"
