--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -1,11 +1,12 @@
 <app-print-header [header]="'Chart of accounts'"></app-print-header>
 <app-grouped-data-view
+  [gridData]="data"
   [showUpdate]="true"
   [showDelete]="true"
-  [gridData]="data"
   [columnsList]="columnBluePrint"
   [groupBy]="groupBy"
   (dataStateChaged)="dataStateChange($event)"
+  (deleteRecord)="deleteAccount($event)"
   #grid
 >
 </app-grouped-data-view>
