--- a/src/app/features/ledgers/ledger-view/ledger-view.component.css
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.css
@@ -1,3 +1,3 @@
-:host(.e-control.e-toolbar.e-lib.e-keyboard) div {
+:host(.e-control.e-toolbar.e-lib.e-keyboard) * {
   display: none !important;
 }
