added authorization service and guard

--- a/src/app/shared/data-view/data-view.component.html
+++ b/src/app/shared/data-view/data-view.component.html
@@ -12,10 +12,9 @@
   allowResizing="true"
   allowFiltering="showFilter"
   [filterSettings]="filterSettings"
+  [allowGrouping]="groupByOptions != null ? true : false"
   (toolbarClick)="toolbarClick($event)"
   (rowSelected)="rowIsSelected($event)"
-  [groupSettings]="groupOptions"
-  [allowGrouping]="allowGrouping"
   (actionComplete)="actionEndHandler($event)"
   [allowPdfExport]="showPdfExport"
   [showColumnChooser]="showColumnChooser"
